istio-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-ds
  labels:
    app: hello-ds
    service: hello-ds
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: hello-ds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ds
  labels:
    app: hello-ds
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-ds
      version: v1
  template:
    metadata:
      labels:
        app: hello-ds
        version: v1
    spec:
      serviceAccountName: test-hello-ds
      containers:
      - name: hello-ds
        image: in9707doc/begin:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
