virtualservice-hello-ds.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-ds
spec:
  hosts:
  - "*"
  gateways:
  - hello-ds-gateway
  http:
  - match:
    - uri:
        exact: /test.do
    route:
    - destination:
        host: hello-ds
        port:
          number: 8080
